--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "react-voa",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/static",
   "dependencies": {
+    "antd": "^3.2.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-router": "^3.0.5",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
