--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.2.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^3.0.5",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
